--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                             <i class="fa brands fa-github"></i>
                             https://github.com/Yuveshi/
                         </li>
+                        <li>
+                            <i class="fa fa-slack"></i>
+                            Slack-Yuveshi
+                        </li>
 
                     </ul>
                 </div>
@@ -276,7 +280,7 @@ Ma passion pour l’apprentissage et ma flexibilité me permettent d’acquérir
 
                         <div class="right-tl-content">
                             <div class="tl-content">
-                                <h5 class="tl-content-2">Agent et Assistante comptable</h5>
+                                <h5 class="tl-content-2">Commercial et Assistante comptable</h5>
                                 <p class="para">
                                     <ol>
                                         <li>Télé-agent expérimenté dans la prise de rendez-vous pour le secteur de l’énergie renouvelable et la télévente dans le domaine des e-travaux.</li>
@@ -295,7 +299,7 @@ Ma passion pour l’apprentissage et ma flexibilité me permettent d’acquérir
 
                         <div class="right-tl-content">
                             <div class="tl-content">
-                                <h5 class="tl-content-2">Agent et Team Leader</h5>
+                                <h5 class="tl-content-2">Commercial et Team Leader</h5>
                                 <p class="para">
                                     <ol>
                                         <li>Expérience éprouvée en tant que commercial B2C dans le secteur des énergies renouvelables.</li>
@@ -315,7 +319,7 @@ Ma passion pour l’apprentissage et ma flexibilité me permettent d’acquérir
 
                         <div class="right-tl-content">
                             <div class="tl-content">
-                                <h5 class="tl-content-2">Agent</h5>
+                                <h5 class="tl-content-2">Commercial</h5>
                                 <p class="para">
                                     <ol>
                                         <li>Expérience éprouvée en tant que commercial B2C dans le secteur des énergies renouvelables.</li>
